14026
The code below gives fatal error in the compiler:

/home/scala/test/test.scala:12: error: consistency problem in target generation ! I have args List(temp16) and need to jump to a label with fmls List()
      case A(j) => ()     
             ^
error: fatal error: consistency problem


Replace "case A(j)" with "case A(_)" and it compiles fine.



//////////////////////////////////// CODE:


case class A( i : Int)

case class B( k : Int ) extends A(0)

object Test {
    
  def f(x:A) {
    x match {
      case B(i) => ()
      case A(j) => ()
    }
  }
}
